# rpa-browser-extension

./: .gitignore  LICENSE  README.md  README_ZH.md
.github/workflows/: v2-ci.yml
v2/: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml
v2/apps/agent/: README.md  pyproject.toml
v2/apps/agent/agent/: main.py
v2/apps/agent/agent/adapters/: cli.py
v2/apps/agent/agent/executors/: __init__.py  errors.py  registry.py  stub_executor.py
v2/apps/agent/agent/models/: __init__.py  contracts.py  error_codes.py
v2/apps/agent/agent/runtime/: __init__.py  _tmp_js_eval.js  browser_session.py  engine.py  flow_migration.py  katalon_runner.py  picker.py  picker_core.py  picker_policy.py  planner.py
v2/docs/: PRD_V1.md  (+34 more)
v2/services/api/: README.md  app_native_host.py  app_sidecar.py  pyproject.toml
v2/services/api/app/: main.py  native_host.py
v2/services/api/app/core/: config.py  error_codes.py  errors.py  native_picker_codes.py  run_broadcaster.py
v2/services/api/app/repositories/: audit_repository.py  credential_repository.py  json_store.py  native_picker_repository.py  picker_repository.py  run_repository.py  task_repository.py
v2/services/api/app/routers/: flows.py  health.py  native_picker.py  picker.py  runs.py  security.py  tasks.py
v2/services/api/app/schemas/: contracts.py  native_picker_protocol.py
v2/services/api/app/services/: audit_service.py  credential_service.py  flow_migration.py  flow_validation.py  native_picker_service.py  picker_service.py  run_service.py  security_service.py  task_service.py
(+112 files in other folders)
