[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-flow-api"
version = "0.1.0"
description = "Local API service for RPA Flow V2"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.10.0",
  "cryptography>=44.0.0",
  "apscheduler>=3.10.4"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13.0",
  "black>=25.1.0",
  "mypy>=1.18.0",
  "httpx>=0.28.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["app"]
